- [2026-02-22 23:30] REFACTOR: 海报提示词精简优化——poster模板去掉冗余风格描述词，去掉"无任何文字"改为鼓励输出中文标题文字，添加"无水印"，引导贴近参考图视觉形式；image_service海报前缀精简为"海报设计风格，无水印" (Files: src/xhs_agent/services/text_service.py, src/xhs_agent/services/image_service.py, src/xhs_agent/agent/prompt_agent.py)
- [2026-02-22 23:15] FEAT: 参考图片影响风格判断+生图时携带参考图——TextService接收参考图标注信息辅助image_style决策（默认倾向poster，仅明确真实场景选photo）；生图API传入参考图COS URL作为image参数（nano-banana和doubao-seedream均支持）；goal_service串联完整链路：加载参考图组→标注传text_service→URL传image_service (Files: src/xhs_agent/services/text_service.py, src/xhs_agent/services/image_service.py, src/xhs_agent/services/goal_service.py)
- [2026-02-22 22:45] REFACTOR: 视觉识别改为组级一次性调用——多张图片作为一组同时传给视觉模型识别，返回整体标注存在组级别，减少API调用次数；prompt改为"整体描述这组图片"，字数上限300字 (Files: src/xhs_agent/services/vision_service.py, src/xhs_agent/services/account_image_service.py, src/xhs_agent/services/goal_service.py, frontend/src/types.ts, frontend/src/App.tsx)
- [2026-02-22 22:40] FEAT: 参考图片改为组模式——每次上传1-9张图片为一组，新建image_groups表管理组，视觉识别按组逐张执行并汇总标注，总管AI按组选择素材（ref_images存组ID），执行时整组图片传给PromptAgent，前端按组展示缩略图+标注+状态 (Files: src/xhs_agent/db.py, src/xhs_agent/services/account_image_service.py, src/xhs_agent/api/router.py, src/xhs_agent/services/manager_service.py, src/xhs_agent/services/goal_service.py, frontend/src/types.ts, frontend/src/api.ts, frontend/src/App.tsx)
- [2026-02-22 22:30] FEAT: 图片上传改为批量模式——选择多张图片后预览缩略图，可逐张删除，点击「确认上传」按钮后统一上传识别；同一组图片共享分类和识别提示 (Files: frontend/src/App.tsx)
- [2026-02-22 22:25] FEAT: COS 存储路径前缀改为系统可配置（cos_path_prefix），默认 ref_images (Files: src/xhs_agent/config.py, src/xhs_agent/services/account_image_service.py, src/xhs_agent/api/router.py, frontend/src/types.ts, frontend/src/App.tsx)
- [2026-02-22 22:20] FEAT: 图片上传时支持人工补充识别提示（user_prompt），视觉模型识别时拼接到分类prompt后面，重试识别时复用原提示 (Files: src/xhs_agent/db.py, src/xhs_agent/services/vision_service.py, src/xhs_agent/services/account_image_service.py, src/xhs_agent/api/router.py, frontend/src/types.ts, frontend/src/api.ts, frontend/src/App.tsx)